<resources>
    <string name="app_name">UMDCSApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main_student">MainActivityStudent</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="loginScreenTitle">UMD Computer Science\nDepartment</string>

    <string name="genedProgressLabel">Gen Eds Progress</string>
    <string name="csMajorProgressLabel">Major Progress</string>
    <string name="csMajorULProgressLabel">Upper Level Concentration Progress</string>
    <string name="degreeTrackerEditButtonLabel">Edit Mode</string>
    <string name="degreeTrackerProfileButtonLabel">Profile: Default</string>
    <string name="cumulativeCredits">100/120 Cumulative Credits</string>
</resources>
